--- a/package.json
+++ b/package.json
@@ -1,32 +1,32 @@
 {
   "name": "fz-srb-terminplanung-backend-admin-panel",
-  "version": "1.3.0",
+  "version": "1.4.0",
   "private": true,
   "dependencies": {
-    "@nestjsx/crud-request": "^4.4.1",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "@types/jest": "^24.0.0",
-    "@types/node": "^12.0.0",
-    "@types/react": "^16.9.0",
-    "@types/react-dom": "^16.9.0",
-    "jwt-decode": "^2.2.0",
+    "@nestjsx/crud-request": "^4.6.2",
+    "@testing-library/jest-dom": "^5.13.0",
+    "@testing-library/react": "^11.2.7",
+    "@testing-library/user-event": "^13.1.9",
+    "@types/jest": "^26.0.23",
+    "@types/node": "^15.12.1",
+    "@types/react": "^17.0.9",
+    "@types/react-dom": "^17.0.6",
+    "jwt-decode": "^3.1.2",
     "moment": "^2.24.0",
-    "query-string": "^6.10.1",
+    "query-string": "^7.0.0",
     "ra-data-json-server": "^3.1.3",
-    "ra-language-german": "^2.1.2",
-    "react": "^16.12.0",
-    "react-admin": "^3.1.3",
-    "react-app-rewired": "^2.1.5",
-    "react-dom": "^16.12.0",
-    "react-scripts": "3.3.0",
-    "typescript": "~3.7.2"
+    "ra-language-german": "^3.13.4",
+    "react": "^17.0.2",
+    "react-admin": "^3.15.2",
+    "react-app-rewired": "^2.1.8",
+    "react-dom": "^17.0.2",
+    "react-scripts": "^4.0.3",
+    "typescript": "^4.3.2"
   },
   "scripts": {
     "start": "react-app-rewired start",
     "prebuild": "rm -rf build",
-    "build": "react-app-rewired build && cp README.md build/README.md",
+    "build": "INLINE_RUNTIME_CHUNK=false react-app-rewired build && cp README.md build/README.md",
     "package": "cd build && zip -r release.zip .",
     "test": "react-app-rewired test",
     "eject": "react-scripts eject",
@@ -49,6 +49,6 @@
     ]
   },
   "devDependencies": {
-    "@types/jwt-decode": "^2.2.1"
+    "@types/jwt-decode": "^3.1.0"
   }
 }
