--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,9 +18,10 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react",
+    "jsx": "react-jsx",
     "noImplicitAny": false,
-    "strictPropertyInitialization": false
+    "strictPropertyInitialization": false,
+    "noFallthroughCasesInSwitch": true
   },
   "include": [
     "src"
